2008-08-21  Antti Kaijanmäki <antti@kaijanmaki.fi>

	* [r15] serviceproviders.xml:
	  Arne Goetje updated Taiwanese provider information

2008-08-20  Antti Kaijanmäki <antti@kaijanmaki.fi>

	* [r14] serviceproviders.xml:
	  Onkar Shinde updated Indian provider information

2008-08-18  Antti Kaijanmäki <antti@kaijanmaki.fi>

	* [r13] serviceproviders.xml:
	  Dan Williams updated the United States provider information

2008-08-14  Antti Kaijanmäki <antti@kaijanmaki.fi>

	* [r11] ChangeLog:
	  update ChangeLog
	* [r10] configure.ac:
	  prepare for release
	* [r9] generate_cl.sh:
	  add linebreak after file list
	* [r8] NEWS, README, README.svn, authors.svn2cl, generate_cl.sh:
	  * added script to generate ChangeLog
	  * added NEWS

2008-07-29  Antti Kaijanmäki <antti@kaijanmaki.fi>

	* [r7] configure.ac, serviceproviders.xml:
	  Christoffer Sawicki updated Swedish provider information

2008-07-25  Antti Kaijanmäki <antti@kaijanmaki.fi>

	* [r6] mobile-broadband-provider-info.pc.in:
	  added .pc
	* [r5] Makefile.am, README, README.svn, configure.ac:
	  added .pc

2008-07-22  Antti Kaijanmäki <antti@kaijanmaki.fi>

	* [r4] Makefile.am, README.svn, configure.ac:
	  Use the GNU Build Tools for configuration and installation (and
	  place them in trunk this time ;)

2008-07-21  Antti Kaijanmäki <antti@kaijanmaki.fi>

	* [r2] COPYING, ChangeLog, MAINTAINERS, README, README.svn,
	  serviceproviders.dtd, serviceproviders.xml:
	  initial commit

2008-07-21  gnomecvs

	* [r1] .:
	  Initial project roots
