@@ -1019,16 +1019,6 @@ conceived.
 <!-- Spain -->
 <country code="es">
 	<provider>
-		<name>Vodafone</name>
-		<gsm>
-			<apn>airtelnet.es</apn>
-		</gsm>
-		<username>vodafone</username>
-		<password>vodafone</password>
-		<dns>196.207.32.69</dns>
-		<dns>196.43.45.190</dns>
-	</provider>
-	<provider>
 		<name>Amena</name>
 		<gsm>
 			<apn>internet</apn>
@@ -1037,6 +1027,22 @@ conceived.
 		<password>AMENA</password>
 		<dns>213.143.32.20 </dns>
 		<dns>213.143.33.8</dns>
+	</provider>
+	<provider>
+		<name>Orange</name>
+		<gsm>
+			<apn>internet</apn>
+		</gsm>
+		<username>CLIENTE</username>
+		<password>AMENA</password>
+		<dns>213.143.32.20 </dns>
+		<dns>213.143.33.8</dns>
+	</provider>
+	<provider>
+		<name>Simyo</name>
+		<gsm>
+			<apn>gprs-service.com</apn>
+		</gsm>
 	</provider>
 	<provider>
 		<name>Telefonica</name>
@@ -1057,6 +1063,16 @@ conceived.
 		<password>vodafone</password>
 		<dns>212.73.32.3</dns>
 		<dns>212.73.32.67</dns>
+	</provider>
+	<provider>
+		<name>Vodafone</name>
+		<gsm>
+			<apn>airtelnet.es</apn>
+		</gsm>
+		<username>vodafone</username>
+		<password>vodafone</password>
+		<dns>196.207.32.69</dns>
+		<dns>196.43.45.190</dns>
 	</provider>
 	<provider>
 		<name>Yoigo</name>
